# tile-match-gym

./: .gitignore  CITATION.bib  README.md  boards.json  candy_crush.py  edge_cases.txt  game_rules.md  match_idea.py  profile_code.py  pyproject.toml  setup.cfg  setup.py  working.ipynb  working.py
candy_crush/: candy_crush.py
examples/: q_learning.py  random.py
match3/: core.py
src/: board.py  core_deprecated.py
src/examples/: analysis.ipynb  q_learning.py  qrdqn.py  random_agent.py
src/tile_match_gym/: board.py  board_test_readme.md  boards.json  old_board.py  renderer.py  tile_match_env.py  tile_translator.py  utils.py  working.ipynb  working.py  wrappers.py
src/tile_match_gym/utils/: __init__.py  print_board_diffs.py
tests/: test_env.py  test_wrappers.py  testing_plan.md  utils.py
tests/board/: board_test_data.json  test_activation.py  test_check_move_validity.py  test_combination_match.py  test_generate_board.py  test_generation.py  test_gravity.py  test_match.py  test_match_detection.py  test_move.py  test_move_valid.py  test_possible_move.py  test_refill.py  test_resolve_colour_match.py  test_translator.py  test_wrappers.py  utils2.py
tile_match_gym/: board.py  boards.json  tile_translator.py
tile_match_gym/utils/: __init__.py  print_board_diffs.py
